--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.UrnaMACachola2"
         tools:targetApi="31">
         <activity
+            android:name=".TelaFim"
+            android:exported="false" />
+        <activity
             android:name=".TelaVotacao"
             android:exported="false" />
         <activity
@@ -27,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
